objects/Booking_Months__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Booking Months</relationshipLabel>
        <relationshipName>Booking_Months</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Percent__c</fullName>
        <label>Invoice Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Booking Month</label>
    <nameField>
        <label>Booking Months Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Months</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>